--- a/script_02.Rmd
+++ b/script_02.Rmd
@@ -21,11 +21,17 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Once you have finished cleaning your data, figure out the course with the highest enrollment. And figure out how many students are enrolled in Gov 50. If you get a number much lower than 151, you have done something wrong . . .
 
-```{r}
-read_excel("raw_data/class_enrollment_summary_by_term_9-17-2020.xlsx", skip = 3) %>% 
+```{r Scene 1, include=TRUE}
+
+# Imported the course enrollment data, cleaned up data, names it "en_fall_2020". The course with the highest enrollment is Principles of Economics with 559 students, and there are 151 students enrolled in both sections of Gov 50.
+
+en_fall_2020<- (read_excel("raw_data/class_enrollment_summary_by_term_9-17-2020.xlsx", skip = 3)) %>% 
   clean_names() %>% 
   select(course_id, course_name, course_department, u_grad) %>% 
-  filter(course_name == "Data")
+  filter(u_grad>10, course_id<20000)
+en_fall_2020%>%
+arrange(desc(u_grad))%>%
+  filter(course_name=="Data")
 ```
 
 
